--- a/src/styles/pages/index.css
+++ b/src/styles/pages/index.css
@@ -1,3 +1,113 @@
-.main {
+main {
   display: flex;
+  flex-direction: column;
+}
+
+/* ============================================= Блок 2: Сайты компаний ============================================= */
+.home__companies {
+  position: relative;
+  display: grid;
+  gap: 20px;
+
+  /* 150px-406px */
+  grid-template-columns: repeat(auto-fill, minmax(clamp(9.375rem, 5.4915rem + 16.5696vw, 25.375rem), 1fr));
+
+  /* 50px 15px 50px 15px - 50px 85px 150px 85px */
+  padding: 50px clamp(0.938rem, -0.1239rem + 4.5307vw, 5.313rem) clamp(3.125rem, 1.6080rem + 6.4725vw, 9.375rem);
+}
+
+.home__company {
+  position: relative;
+  display: flex;
+  align-items: flex-end;
+  transition: all 300ms ease;
+
+  /* 15px-20px */
+  border-radius: clamp(0.938rem, 0.8623rem + 0.3231vw, 1.25rem);
+
+  /* 200px-301px */
+  height: clamp(12.5rem, 10.9677rem + 6.5377vw, 18.813rem);
+  box-shadow: 0 4px 16px 0 #4a586e57;
+
+  /* 15px 10px - 25px 25px */
+  padding: clamp(0.938rem, 0.7863rem + 0.6472vw, 1.563rem) clamp(0.625rem, 0.3973rem + 0.9714vw, 1.563rem);
+}
+
+.home__companies::-webkit-scrollbar {
+  display: none;
+}
+
+.home__company img {
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: inherit;
+}
+
+.home__company p {
+  z-index: 3;
+  color: var(--color-white);
+  overflow-wrap: anywhere;
+}
+
+.home__company::before {
+  content: '';
+  z-index: 2;
+  position: absolute;
+  inset: 0;
+  height: 100%;
+  width: 100%;
+  border-radius: inherit;
+  background: linear-gradient(180deg, #fff0 0%, #262d49bb 100%);
+}
+
+.home__company__icon-external-link {
+  position: absolute;
+  right: 0;
+  bottom: -22px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 3;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--color-dark-blue);
+  border: 1px solid #A0B3D1;
+  width: 56px;
+  padding: 10px;
+  border-radius: 100px;
+  transition: all 300ms ease;
+}
+
+/* ============================================= Все эффекты наведения и фокуса ============================================= */
+.home__company:active {
+  box-shadow: 0 4px 0 0 var(--color-orange);
+}
+
+.home__company:active .home__company__icon-external-link {
+  box-shadow: 0 4px 0 0 var(--color-orange);
+}
+
+@media (hover: hover) and (pointer: fine) {
+  .home__company:hover {
+    box-shadow: 0 4px 0 0 var(--color-orange);
+  }
+
+  .home__company:hover .home__company__icon-external-link {
+    box-shadow: 0 4px 0 0 var(--color-orange);
+  }
+}
+
+@media (width <=944px) and (hover: none) and (pointer: coarse) {
+  .home__companies {
+    overflow-x: auto;
+    grid-auto-flow: column;
+
+    /* 150px-406px */
+    grid-auto-columns: minmax(clamp(9.375rem, 5.4915rem + 16.5696vw, 25.375rem), 1fr);
+  }
 }
