--- a/src/styles/components/buttons.css
+++ b/src/styles/components/buttons.css
@@ -1,3 +1,27 @@
-button {
-  background-color: #ff00;
+.btn-orange {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 32px;
+  border-radius: 10px;
+  background-color: var(--color-orange);
+  border: 1px solid transparent;
+  transition: all 300ms ease;
+  color: var(--color-white);
+  width: min-content;
+  flex-shrink: 0;
+}
+
+/* ============================================= Все эффекты наведения и фокуса ============================================= */
+.btn-orange:active {
+  border: 1px solid var(--color-blue);
+  background-color: var(--color-blue);
+}
+
+@media (hover: hover) and (pointer: fine) {
+  .btn-orange:hover {
+    border: 1px solid var(--color-blue);
+    background-color: #F5F5F5;
+    color: var(--color-blue);
+  }
 }
