--- a/src/styles/settings/typography.css
+++ b/src/styles/settings/typography.css
@@ -29,19 +29,22 @@ h3 {
 }
 
 .text-base {
-  font-size: 20px;
+  /* 16px-20px */
+  font-size: clamp(1rem, 0.9393rem + 0.2589vw, 1.25rem);
   line-height: 26px;
   font-weight: 400;
 }
 
 .text-base-bold {
-  font-size: 20px;
+  /* 16px-20px */
+  font-size: clamp(1rem, 0.9393rem + 0.2589vw, 1.25rem);
   line-height: 26px;
   font-weight: 700;
 }
 
 .text-description {
-  font-size: 16px;
+  /* 12px-16px */
+  font-size: clamp(0.75rem, 0.6893rem + 0.2589vw, 1rem);
   font-weight: 400;
   line-height: 24px;
 }
