Сделал главная/новости  (Блоки 4)

--- a/src/styles/components/buttons.css
+++ b/src/styles/components/buttons.css
@@ -10,6 +10,7 @@
   color: var(--color-white);
   width: min-content;
   flex-shrink: 0;
+  white-space: nowrap;
 }
 
 /* ============================================= Все эффекты наведения и фокуса ============================================= */
