--- a/src/styles/settings/typography.css
+++ b/src/styles/settings/typography.css
@@ -49,6 +49,13 @@ h3 {
   font-weight: 700;
 }
 
+.text-description--600 {
+  /* 12px-16px */
+  font-size: clamp(0.75rem, 0.6893rem + 0.2589vw, 1rem);
+  font-weight: 600;
+  line-height: 24px;
+}
+
 .text-description--400 {
   /* 12px-16px */
   font-size: clamp(0.75rem, 0.6893rem + 0.2589vw, 1rem);
